# GearWorkBench

./: .gitignore  CLAUDE.md  InitGui.py  README.md  SpurGear.md  bevelGear.py  crownGear.py  cycloidGear.py  cycloidRack.py  doubleHelicalGear.py  gearMath.py  gearMath.py.backup  gearPositioning.py  gearStack.py  genericBevel.py  genericCrown.py  genericGear.py  genericHypoid.py  genericInternalGear.py  genericNonCircular.py  genericRack.py  genericScrew.py  genevaWheel.py  globoidWormGear.py  globoidWormGearV2.py  globoidWormGearV3.py  helicalGear.py  hypoidGear.py  internalDoubleHelicalGear.py  internalGear.py  internalSpurGear.py  lanternGear.py  nonCircularGear.py  package.xml  planetaryGearCreator.py  pyproject.toml  rackGear.py  screwGear.py  spurGear.py  test_internal_gear.py  (+5 more)
freecad/GearWorkBench/: __init__.py  bevelGear.py  crownGear.py  cycloidFun.py  cycloidGear.py  cycloidGearCreator.py  cycloidRack.py  gearAxles.py  gearLog.py  gearMath.py  gearPositioning.py  gearStack.py  genericBevel.py  genericCrown.py  genericGear.py  genericGearMinimal.py  genericHypoid.py  genericInternalGear.py  genericNonCircular.py  genericRack.py  genericScrew.py  genevaWheel.py  globoidWormGear.py  globoidWormGearV2.py  globoidWormGearV4.py  hypoidGear.py  init_gui.py  lanternGear.py  nonCircularGear.py  planetaryGearCreator.py  rackGear.py  screwGear.py  timingGear.py  unifiedGear.py  util.py  wormGear.py
reference/: How to Model Accurate Involute Spur Gears in SOLIDWORKS.html
samplecode/: globoidworm.scad
tests/: __init__.py  test_gearMath.py
(+25 files in other folders)
